2006-05-22  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (cleanup_hosts): Don't free the hosts
	while holding host_lock; that's not allowed and can cause
	deadlock. #309867. Based on a patch from Veerapuram Varadhan for
	part of bnc #174255.

2006-04-10  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.92

	* NEWS: update

2006-04-10  Dan Winship  <danw@novell.com>

	* libsoup/soup-message-io.c (io_write, io_read): g_return_if_fail
	if these get called after the IO is done. This isn't supposed to
	happen, but apparently does. Workaround for #334469.

	* libsoup/soup-auth-digest.c (qop_types, algorithm_types):
	NULL-terminate these so we don't crash when trying to parse an
	invalid value. (Flip side of the previous #328615 patch.)

2006-04-02  Dan Winship  <danw@novell.com>

	* libsoup/soup-server-auth.c (soup_server_auth_context_challenge):
	Write out correct digest algorithm value. #328615.

	* libsoup/soup-headers.c (soup_headers_parse_request): Rewrite
	Request-Line-parsing code to not have a lame max length. #335040.

	* Makefile.am (install-data-local): Install the .pc file mode 644,
	not 755. #330878

	* libsoup/soup-auth-digest.c:
	* libsoup/soup-auth.c:
	* libsoup/soup-message-client-io.c:
	* libsoup/soup-message-server-io.c:
	* libsoup/soup-message.c:
	* libsoup/soup-method.c:
	* libsoup/soup-server-auth.c:
	* tests/get.c: replace locale-ish strcasecmps with
	g_ascii_strcasecmp

	* libsoup/*.c: fix most signed/unsigned mismatch warnings

2006-03-03  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.91.

	* NEWS: Update

2006-03-03  Dan Winship  <danw@novell.com>

	* libsoup/soup-dns.c (soup_dns_lookup_resolve_async): Take a
	GMainContext as well, and update the resolution code to dispatch
	each lookup result in the correct context.

	* libsoup/soup-address.c (soup_address_resolve_async_full): New
	method that takes a GMainContext to pass to
	soup_dns_lookup_resolve_async.
