@@ -866,3 +866,19 @@ soup_message_io_unpause (SoupMessage *msg)
 	else
 		io_read (io->sock, msg);
 }
+
+/**
+ * soup_message_io_in_progress:
+ * @msg: a #SoupMessage
+ *
+ * Tests whether or not I/O is currently in progress on @msg.
+ *
+ * Return value: whether or not I/O is currently in progress.
+ **/
+gboolean
+soup_message_io_in_progress (SoupMessage *msg)
+{
+	SoupMessagePrivate *priv = SOUP_MESSAGE_GET_PRIVATE (msg);
+
+	return priv->io_data != NULL;
+}
